--- a/ShareScreen/MainWindow.xaml
+++ b/ShareScreen/MainWindow.xaml
@@ -5,21 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ShareScreen"
         mc:Ignorable="d"
-        Title="UniDesk" Height="300" Width="600"
-        WindowStartupLocation="CenterScreen">
-
+        Title="MainWindow" Height="300" Width="600">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="65"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
-        <!-- HOST INFORMATION -->
+        
         <GroupBox>
             <GroupBox.Header>
                 <TextBlock FontSize="14" FontWeight="Bold" Text="Host Information"/>
             </GroupBox.Header>
-
+            
             <Grid Margin="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="30"/>
@@ -27,30 +24,22 @@
                     <ColumnDefinition Width="65"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-
+                
                 <Label Content="ID:"/>
-                <TextBox Grid.Column="1"
-                         Background="Transparent"
+                <TextBox Background="Transparent" Grid.Column="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                          BorderThickness="0"
-                         VerticalContentAlignment="Center"
-                         HorizontalContentAlignment="Center"
                          Text="{Binding HostId, Mode=OneWay}"
                          IsReadOnly="True"
-                         TextWrapping="Wrap"/>
-
-                <Label Grid.Column="2" Content="Password:"/>
-                <TextBox Grid.Column="3"
-                         Background="Transparent"
+                         TextWrapping="Wrap" />
+                <Label Content="Password:" Grid.Column="2"/>
+                <TextBox Background="Transparent" Grid.Column="3" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                          BorderThickness="0"
-                         VerticalContentAlignment="Center"
-                         HorizontalContentAlignment="Center"
                          Text="{Binding HostPassword, Mode=OneWay}"
                          IsReadOnly="True"
-                         TextWrapping="Wrap"/>
+                         TextWrapping="Wrap" />
             </Grid>
         </GroupBox>
 
-        <!-- CONNECT TO CLIENT -->
         <GroupBox Grid.Row="1">
             <GroupBox.Header>
                 <TextBlock FontSize="14" FontWeight="Bold" Text="Connect to client"/>
@@ -66,30 +55,15 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Content="ID:"/>
-                    <TextBox Grid.Column="1"
-                             Text="{Binding ClientId, Mode=TwoWay}"
-                             HorizontalAlignment="Stretch"
-                             VerticalContentAlignment="Center"/>
-
-                    <Label Grid.Column="2" Content="Password:"/>
-                    <TextBox Grid.Column="3"
-                             Text="{Binding ClientPassword, Mode=TwoWay}"
-                             VerticalContentAlignment="Center"/>
+                    <TextBox Text="{Binding ClientId, Mode=TwoWay}" Grid.Column="1" HorizontalAlignment="Stretch" VerticalContentAlignment="Center"/>
+                    <Label Content="Password:" Grid.Column="2"/>
+                    <TextBox Text="{Binding ClientPassword, Mode=TwoWay}" Grid.Column="3" VerticalContentAlignment="Center"/>
                 </Grid>
-
-                <Button Content="Connect"
-                        Width="100"
-                        Height="45"
-                        Margin="0 5 0 0"
-                        Click="Button_Click"/>
-
-                <Label Content="{Binding ConnectionStatus}"
-                       HorizontalAlignment="Center"/>
-
-                <Label Content="{Binding ConnectionId}"
-                       HorizontalAlignment="Center"/>
+                <Button Content="Connect" Width="100" Height="45" Margin="0 5 0 0" Click="Button_Click"/>
+                <Label Content="{Binding ConnectionStatus}" HorizontalAlignment="Center"/>
+                <Label Content="{Binding ConnectionId}" HorizontalAlignment="Center"/>
             </StackPanel>
+            
         </GroupBox>
-
     </Grid>
 </Window>
